--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
   <body>
       <div id="globalBody">
           <h1 data-bind="text:appName"></h1>
+          <div data-bind="ojModule: 'home'">
+          </div>
       </div>
     <script type="text/javascript" src="js/libs/require/require.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
